@@ -27,17 +27,9 @@
 #define RSVG_SHAPES_H
 
 #include "rsvg.h"
-#include "rsvg-defs.h"
 #include <libxml/SAX.h>
 
 G_BEGIN_DECLS
-
-struct _RsvgDefsPath {
- 	RsvgDefVal super;
- 	char *d;
-};
- 
-typedef struct _RsvgDefsPath RsvgDefsPath;
 
 void rsvg_render_path (RsvgHandle *ctx, const char *d);
 void rsvg_start_path (RsvgHandle *ctx, const xmlChar **atts);
